[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/ScriptFileSection.gd" type="Script" id=1]

[node name="ScriptFileSection" type="PanelContainer"]
margin_top = 561.0
margin_right = 537.0
margin_bottom = 743.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 530.0
margin_bottom = 175.0
mouse_filter = 2

[node name="HeaderVBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 523.0
margin_bottom = 32.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderVBoxContainer"]
margin_right = 523.0
margin_bottom = 24.0
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5

[node name="HeaderLabel" type="Label" parent="VBoxContainer/HeaderVBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_top = 5.0
margin_right = 523.0
margin_bottom = 19.0
text = "DKScript file"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HeaderVBoxContainer"]
margin_top = 28.0
margin_right = 523.0
margin_bottom = 32.0

[node name="PathLinkButton" type="LinkButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_left = 217.0
margin_top = 36.0
margin_right = 306.0
margin_bottom = 50.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 0.376471 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "map00001.txt"
underline = 2

[node name="PathHSeparator" type="HSeparator" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 523.0
margin_bottom = 58.0

[node name="HBoxCreate" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 62.0
margin_right = 523.0
margin_bottom = 82.0

[node name="CreateLabel" type="Label" parent="VBoxContainer/HBoxCreate"]
unique_name_in_owner = true
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Create .txt file"

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxCreate"]
margin_left = 263.0
margin_right = 523.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Create"

[node name="HBoxGenerate" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 86.0
margin_right = 523.0
margin_bottom = 106.0

[node name="GenerateLabel" type="Label" parent="VBoxContainer/HBoxGenerate"]
unique_name_in_owner = true
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Script generator"

[node name="GenerateButton" type="Button" parent="VBoxContainer/HBoxGenerate"]
margin_left = 263.0
margin_right = 523.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Generate"

[node name="HBoxDelete" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 110.0
margin_right = 523.0
margin_bottom = 130.0

[node name="DeleteLabel" type="Label" parent="VBoxContainer/HBoxDelete"]
unique_name_in_owner = true
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Delete .txt file"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxDelete"]
margin_left = 263.0
margin_right = 523.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Delete"

[connection signal="pressed" from="VBoxContainer/PathLinkButton" to="." method="_on_PathLinkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxCreate/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxGenerate/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxDelete/DeleteButton" to="." method="_on_DeleteButton_pressed"]
